# mcp-makefile-server

./: .gitignore  DEVELOP.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/mcp_makefile/: __init__.py  __main__.py  exceptions.py  server.py
src/mcp_makefile/core/: executor.py  models.py  parser.py
tests/fixtures/: categorized.mk  exec-test.mk  mixed.mk  simple.mk
tests/unit/: test_config.py  test_exceptions.py  test_executor.py  test_models.py  test_parser.py  test_server.py
