[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-makefile-server"
version = "0.1.0"
description = "MCP server that exposes Makefile targets as tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
mcp-makefile-server = "mcp_makefile.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "vulture>=2.0",
    "pylint>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_makefile"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
